[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Objects/ContactWire.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Objects/CurrentContact.tscn" type="PackedScene" id=2]

[node name="ContactWire" type="Node2D" groups=["LabObjects"]]
z_index = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Contact1" parent="." instance=ExtResource( 2 )]
gravity_scale = 0.0

[node name="Contact2" parent="." instance=ExtResource( 2 )]
position = Vector2( 50, 0 )
gravity_scale = 0.0
